Minor piechart and coinlist fix
Asset division now hides zero values and fixed page moving on hovering items in coinlist

--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ hr {
   min-width: 164px;
   text-align: center;
   margin: 2rem;
+  height: 210px;
 
   box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
   border-radius: 8px;
