--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -25,13 +25,49 @@
   --header-label-dark: #34495e;
 }
 
-.coinlist-container {
-  margin: 2rem;
-  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+.overview-graph {
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; /*92*/
+  border-radius: 8px;
+  margin: 0.5em;
+  padding: 5px;
+  background-color: white;
+  color: var(--header-label-dark);
+  overflow: hidden;
+  height: 450px;
+}
+.overview-element {
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; /*92*/
   border-radius: 8px;
   margin: 2em;
-  transition: border-radius 0.25s;
+  margin-bottom: 1em;
   background-color: white;
+  color: var(--header-label-dark);
+}
+
+.overview-element h2 {
+  margin-block-end: 0.2em;
+}
+.overview-element p {
+  margin-block-start: 0.2em;
+}
+
+.coinlist-container {
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; /*92*/
+  border-radius: 8px;
+  margin: 2em;
+  background-color: white;
+}
+
+.coinlist-container h3 {
+  margin-block-end: 0.2em;
+}
+.coinlist-container h4 {
+  margin-block-start: 0.2em;
+  margin-block-end: 0.2em;
+  font-size: 1.2em;
+}
+.coinlist-container p {
+  margin-block-start: 0.2em;
 }
 
 .coinlist-icon {
@@ -42,6 +78,15 @@
   margin-top: 1rem;
   transition: width 0.25s;
 }
+
+hr {
+  border: none;
+  border-top: 1px dashed #252a2f69;
+  color: #fff;
+  height: 2px;
+  width: 100%;
+}
+
 /*
  * -- BASE STYLES --
  * Most of these are inherited from Base, but I want to change a few.
