--- a/nexo-ta/src/components/UI/General.css
+++ b/nexo-ta/src/components/UI/General.css
@@ -102,3 +102,38 @@
 .hide-scrollbar::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
+
+.margin-bottom--xl {
+  margin-bottom: 9.6rem;
+}
+
+.btn--primary {
+  padding: 1.6rem 3.2rem;
+  border-radius: 9px;
+
+  background-color: inherit;
+  border: none;
+
+  font-size: 1.4rem;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+
+  transition: transform 0.3s;
+
+  cursor: pointer;
+
+  text-decoration: none;
+}
+
+.btn--primary:hover,
+.btn--primary:active {
+  transform: scale(1.05);
+  background-color: #e9edfb;
+  /* color: white; */
+}
+
+.btn--primary:focus {
+  transform: scale(1.05);
+  background-color: #e9edfb;
+  outline: rgba(0, 0, 0, 0.1) solid;
+}
