--- a/nexo-ta/src/components/UI/FileUpload.module.css
+++ b/nexo-ta/src/components/UI/FileUpload.module.css
@@ -33,7 +33,37 @@
   border: none;
 }
 
+.loaded label {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 .loaded label span {
   color: #1e4dd8;
   font-weight: 500;
+}
+
+.loaded label button {
+  display: flex;
+  justify-content: center;
+  /* padding-top: 0.2rem; */
+  cursor: pointer;
+  background-color: inherit;
+  border: none;
+}
+
+.loaded label button:focus,
+.loaded label button:hover {
+  transform: scale(1.1);
+}
+
+.loaded label button:focus {
+  outline: rgba(0, 0, 0, 0.1) solid;
+}
+
+.errorMessage {
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: red;
 }
