Currencies are loaded from backend now, added loading screen and currency state

--- a/nexo-ta/src/components/UI/General.css
+++ b/nexo-ta/src/components/UI/General.css
@@ -9,6 +9,9 @@
  #122e82 // 40%
  #091741 // 70% (Headings & Logo)
 
+ Letter-Spacing:
+ 1px (platform loading screen)
+
  Border-radius:
  Default: 9px
 
