--- a/nexo-ta/src/components/Platform/Coinlist/index.module.css
+++ b/nexo-ta/src/components/Platform/Coinlist/index.module.css
@@ -39,3 +39,19 @@
 .coinlist-content div h2 {
   color: #091741;
 }
+
+.inputLabel {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.settings {
+  display: flex;
+  gap: 3rem;
+  margin-bottom: 2rem;
+}
+
+.settings p {
+  font-weight: 600;
+}
