--- a/nexo-ta/src/components/UI/General.css
+++ b/nexo-ta/src/components/UI/General.css
@@ -10,7 +10,7 @@
  #091741 // 70% (Headings & Logo)
 
  Letter-Spacing:
- 1px (platform loading screen)
+ 1px (platform loading screen, Coinlist symbol)
 
  Border-radius:
  Default: 9px
