--- a/nexo-ta/src/components/UI/General.css
+++ b/nexo-ta/src/components/UI/General.css
@@ -23,7 +23,7 @@
 
 /**
 - Font sizes (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 38 / 44 / 48 / 52 / 62 / 74 / 86 / 98
 
 - Spacing System (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
