--- a/nexo-ta/src/components/Platform/Coinlist/CoinlistItem.module.css
+++ b/nexo-ta/src/components/Platform/Coinlist/CoinlistItem.module.css
@@ -14,6 +14,14 @@
   position: relative;
 }
 
+.coinlist-item:hover,
+.coinlist-item:focus {
+  /* filter: grayscale(1); */
+  transform: scale(1.025);
+  background-color: #e9edfb;
+  outline: rgba(0, 0, 0, 0.1) solid;
+}
+
 .coinlist-content {
   display: flex;
   align-items: center;
