Google font is now local

--- a/nexo-ta/src/components/UI/General.css
+++ b/nexo-ta/src/components/UI/General.css
@@ -29,6 +29,8 @@
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 **/
 
+@import url("/src/fonts/Inter.css");
+
 /* Grid system */
 .grid {
   display: grid;
