--- a/nexo-ta/src/index.css
+++ b/nexo-ta/src/index.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap"); */
+@import "./components/UI/General.css";
 
 /* Reset */
 * {
@@ -26,5 +27,3 @@ html {
 
   height: 100vh;
 }
-
-@import "./components/UI/General.css";
